--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -8,3 +8,6 @@ $colorBlanco: rgb(255, 255, 255);
 //variables de medidas en px
 $medidaMobile: 320px;
 $medidaCard: 305px;
+$anchoCarrousel: 410px;
+$altoCarrousel: 530px;
+$anchoVideo1: 300px;
